Bugfix: size of the date range field on ie7

--- a/website/htdocs/public/js/genapp/resources/css/genapp-gray-extend-all.css
+++ b/website/htdocs/public/js/genapp/resources/css/genapp-gray-extend-all.css
@@ -352,7 +352,7 @@ ul.x-tab-strip li.genapp-query-center-panel-tab-strip-top-button{
 
 .x-menu-plain .x-date-picker {
     border-style: none solid solid;
-    border-width: 0 1px 1px;
+    border-width: 0 1px;
 }
 .x-menu-date-range-item-range-date-button {
     margin-left:82px;
@@ -367,13 +367,13 @@ ul.x-tab-strip li.genapp-query-center-panel-tab-strip-top-button{
 .x-date-range-menu .x-menu-list {
     padding:0;
 }
-.x-menu-date-range-item .x-panel-btns{
+.x-menu-date-range-item .x-panel-btns {
     padding:0;
 }
-.x-menu-date-range-item .x-panel-btns .x-date-bottom{
+.x-menu-date-range-item .x-panel-btns .x-date-bottom {
     padding:0;
 }
-.ext-ie .x-menu-date-range-item .x-panel-btns .x-date-bottom{
+.ext-ie .x-menu-date-range-item .x-panel-btns .x-date-bottom {
     margin: 0 0 -1px;
 }
 .x-menu-date-range-item .x-panel-tbar-noheader .x-toolbar, .x-panel-mc .x-panel-tbar .x-toolbar {
@@ -383,10 +383,12 @@ ul.x-tab-strip li.genapp-query-center-panel-tab-strip-top-button{
     border-width:0;
 }
 .x-menu-date-range-item .x-panel-body {
-    border-width:1px 0 0;
+    border-width:0;
+    margin: 5px;
 }
-.ext-ie .x-menu-date-range-item  .x-panel-fbar{
-    width:100% !important;
+.x-date-mp {
+    border-top-style: solid;
+    border-top-width: 1px;
 }
 /*************************************************************************************************/
 
@@ -667,7 +669,7 @@ ul.x-tab-strip li.genapp-query-center-panel-tab-strip-top-button{
 /*************************************************************************************************/
 
 /***** Date Range Picker *********************************************************************/
-.x-menu-date-range-item .x-panel-body{
+.x-menu-date-range-item, .x-menu-date-range-item .x-panel-body{
     background-color: #EFEFEF;
 }
 .x-menu-plain .x-date-picker {
@@ -675,6 +677,9 @@ ul.x-tab-strip li.genapp-query-center-panel-tab-strip-top-button{
 }
 .x-date-range-menu {
     border-color:#898989 !important;
+}
+.x-date-mp {
+    border-color:#D0D0D0;
 }
 /*************************************************************************************************/
 
