--- a/website/htdocs/public/js/genapp/resources/css/visual/genapp-green-ifn.css
+++ b/website/htdocs/public/js/genapp/resources/css/visual/genapp-green-ifn.css
@@ -200,6 +200,9 @@
 .x-date-range-menu {
     border-color:#75AA1C !important;
 }
+.x-date-mp {
+    border-color:#75AA1C;
+}
 /*************************************************************************************************/
 
 /***** Number Range Picker *********************************************************************/
